--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,4 +21,16 @@
         @apply text-sm inline-flex border border-[#222]/10 px-3 py-1 rounded-lg tracking-tight
     }
 
+    .section-title {
+        @apply text-center text-3xl md:text-[54px] md:leading-[60px] font-bold tracking-tighter bg-gradient-to-b from-black to-[#001E80] bg-clip-text text-transparent
+    }
+
+    .section-desc {
+        @apply text-center text-[#010D3E] tracking-tight text-[22px] leading-[30px]
+    }
+
+    .sectionn-heading {
+        @apply max-w-[540px] mx-auto
+    }
+
 }
